--- a/vendas.html
+++ b/vendas.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página de Vendas
-        <a href="index.html">Voltar para a página Principal</a>
-    </h1>
+    <h1>Página de Vendas</h1>
+    <p>Vendas = R$ 5000,00</p>
+    <a href="index.html">Voltar para a página Principal</a>
 </body>
 </html>
